✨ Add: API定義作成
