# backend/app/Http/Requests/Auth/LoginRequest.php
@@ -1,0 +1,48 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Requests\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: 'loginRequest',
+    title: 'ログインリクエスト',
+    type: 'object',
+    required: ['email', 'password'],
+    properties: [
+        new OA\Property(
+            property: 'email',
+            ref: '#/components/schemas/user/properties/email'
+        ),
+        new OA\Property(
+            property: 'password',
+            ref: '#/components/schemas/user/properties/password'
+        ),
+    ]
+)]
+class LoginRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'email' => ['required', 'string', 'email'],
+            'password' => ['required', 'string'],
+        ];
+    }
+}
